@@ -10,7 +10,7 @@ $huge='overflow';
 $Text::Wrap::columns=9;
 $break="(?<=[,.])";
 eval {
-$a=wrap('','',
+$a=$a=wrap('','',
 "mmmm,n,ooo,ppp.qqqq.rrrrr,sssssssssssss,ttttttttt,uu,vvv wwwwwwwww####\n");
 };
 
